--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,10 @@
   <groupId>com.railways</groupId>
   <artifactId>rail_ticket</artifactId>
   <version>1.0.0</version>
-  
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
   
   <dependencies>
   <!-- https://mvnrepository.com/artifact/com.sendgrid/sendgrid-java -->
