--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
     <artifactId>sendgrid-java</artifactId>
     <version>4.4.1</version>
 </dependency>
-  
+  <dependency>
+     <groupId>junit</groupId>
+     <artifactId>junit</artifactId>
+     <version>3.8.1</version>
+     <scope>test</scope>
+   </dependency>
   </dependencies>
 </project>
